--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,19 @@ jobs:
       run: |
         az account show
         az group list -o table
+
+    - name: conventional changelog action
+      id: changelog
+      # https://github.com/TriPSs/conventional-changelog-action
+      uses: TriPSs/conventional-changelog-action@latest
+      with:
+        github-token: "${{ secrets.GITHUB_TOKEN }}"}
+        skip-commit: 'true'
+        # version-file: '../packages/package.json'
+        skip-tag: 'false'
       
+
+        
     # - name: Preview Changes from Bicep
     #   uses: Azure/deployment-what-if-action@v1.0.0
     #   with:
