--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,8 @@ jobs:
         github-token: "${{ secrets.GITHUB_TOKEN }}"
         skip-commit: 'true'
         # version-file: '../packages/package.json'
-        skip-tag: 'false'
+        skip-tag: 'true'
+        output-file: 'CHANGELOG.md'
       
 
         
