feat(azure): List existing RG and testing changelog action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
 
         - name: 'Run az commands'
-          run: az account show
+          run: az group list
        
           
     # changelog:
