feat(azure): Update az commands to be run with the workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,9 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
 
+        # Run az commands
         - name: 'Run az commands'
-          run: az group list -o table
+          run: az group list
        
           
     # changelog:
